--- a/index.html
+++ b/index.html
@@ -12,11 +12,15 @@
         <h1> A Revolução dos Bichos </h1>
         <p> Projeto de site criado para a eletiva: "Todos os animais são iguais, mas alguns animais são mais iguais que outros." </p>
     </header>
+    <nav>
+        <a href="#"> Home </a>
+        <a href="#"> Curiosidades </a>
+        <a href="#"> Quem somos </a>     
+    </nav>
     <main>
         <article>
             <h2> Apresentação da eletiva </h1>
-            <p> A eletiva "Todos os animais são iguais, mas alguns animais são mais iguais que outros.", elaborada pelos professores Ana Lúcia e Pedro, teve como temática principal, o livro "A Revolução dos Bichos", de <a href="https://www.companhiadasletras.com.br/autor.php?codigo=02241"> George Orwell </a>, na qual fizemos uma leitura em conjunto do mesmo, discussões acerca do enredo, além da elaboração da culminância. </p>
-
+            <p> A eletiva "Todos os animais são iguais, mas alguns animais são mais iguais que outros.", elaborada pelos professores Ana Lúcia e Pedro, teve como temática principal, o livro "A Revolução dos Bichos", de <a href="https://www.companhiadasletras.com.br/autor.php?codigo=02241">George Orwell </a>, na qual fizemos uma leitura em conjunto do mesmo, discussões acerca do enredo, além da elaboração da culminância. </p>
             <h2> Resumo do livro </h2>
             <p> "" <br>
              - A Revolução dos bichos (edição da Companhia das Letras) </a></p>
@@ -32,6 +36,25 @@
                     <img src="imagens/capa-2-p.png" alt="Capa da edição lida de forma paralela à prinipal">
                 </picture>
             </div>
+            <aside>
+                <h3> Apresentação das personagens </h2>
+                <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit atque voluptas cum quae aut repellat porro! Qui ea, nemo veniam pariatur ut necessitatibus ad architecto dolorum blanditiis est labore repudiandae? </p>
+                <ul>
+                    <li> <abbr title="Bola-de-Neve"> [nome em inglês] </abbr> </li>
+                    <li> <abbr title="Sansão"> [nome em inglês] </abbr> </li>
+                    <li> <abbr title="Major"> [nome em inglês] </abbr> </li>
+                    <li> <abbr title="Sr. Jones"> Mr. Jones </abbr> </li>
+                    <li> <abbr title="Napoleão"> [nome em inglês] </abbr> </li>
+                    <li> <abbr title="personagem 6"> [nome em inglês] </abbr> </li>
+                    <li> <abbr title="personagem 7"> [nome em inglês] </abbr> </li>
+                    <li> <abbr title="personagem 8"> [nome em inglês] </abbr> </li>
+                    <li> <abbr title="personagem 9"> [nome em inglês] </abbr> </li>
+                    <li> <abbr title="personagem 10"> [nome em inglês] </abbr> </li>
+            </ul>
+        </aside>
+        
+        <h2> Subtítulo 4 </h2>
+            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis possimus exercitationem cumque natus quaerat, quidem sequi tenetur voluptas ex nulla repellat ullam mollitia libero commodi, distinctio id vitae! Voluptas, facere! </p>
         </article>
     </main>
     <footer>
