--- a/index.html
+++ b/index.html
@@ -20,22 +20,14 @@
     <main>
         <article>
             <h2> Apresentação da eletiva </h1>
-            <p> A eletiva "Todos os animais são iguais, mas alguns animais são mais iguais que outros.", elaborada pelos professores Ana Lúcia e Pedro, teve como temática principal, o livro "A Revolução dos Bichos", de <a href="https://www.companhiadasletras.com.br/autor.php?codigo=02241">George Orwell </a>, na qual fizemos uma leitura em conjunto do mesmo, discussões acerca do enredo, além da elaboração da culminância. </p>
+            <p> A eletiva "Todos os animais são iguais, mas alguns animais são mais iguais que outros.", elaborada pelos professores Ana Lúcia e Pedro, teve como temática principal, o livro "A Revolução dos Bichos", de <a href="https://www.companhiadasletras.com.br/autor.php?codigo=02241" target="_blank" class="externa"> George Orwell </a>, na qual fizemos uma leitura em conjunto do mesmo, discussões acerca do enredo, além da elaboração da culminância. </p>
             <h2> Resumo do livro </h2>
             <p> "" <br>
              - A Revolução dos bichos (edição da Companhia das Letras) </a></p>
-            <div>
-                <picture>
-                    <source media="(max-width: 200px)" srcset="imagens/capa-1.jpg">
+            <picture>
+                    <source media="(max-width: 500px)" srcset="imagens/capa-1-p.jpg">
                     <img src="imagens/capa-1-p.jpg" alt="Capa da edição principal lida ao longo da eletiva" class="capa">
-                </picture>
-            </div>
-            <div>
-                <picture>
-                    <source media="(max-width: 200px)" srcset="imagens/capa-2.png">
-                    <img src="imagens/capa-2-p.png" alt="Capa da edição lida de forma paralela à prinipal">
-                </picture>
-            </div>
+            </picture>
             <aside>
                 <h3> Apresentação das personagens </h2>
                 <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit atque voluptas cum quae aut repellat porro! Qui ea, nemo veniam pariatur ut necessitatibus ad architecto dolorum blanditiis est labore repudiandae? </p>
@@ -52,7 +44,7 @@
                     <li> <abbr title="personagem 10"> [nome em inglês] </abbr> </li>
             </ul>
         </aside>
-        
+
         <h2> Subtítulo 4 </h2>
             <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis possimus exercitationem cumque natus quaerat, quidem sequi tenetur voluptas ex nulla repellat ullam mollitia libero commodi, distinctio id vitae! Voluptas, facere! </p>
         </article>
