Atualizei o arquivo HTML

--- a/index.html
+++ b/index.html
@@ -20,10 +20,18 @@
     <main>
         <article>
             <h2> Apresentação da eletiva </h1>
-            <p> A eletiva "Todos os animais são iguais, mas alguns animais são mais iguais que outros.", elaborada pelos professores Ana Lúcia e Pedro, teve como temática principal, o livro "A Revolução dos Bichos", de <a href="https://www.companhiadasletras.com.br/autor.php?codigo=02241" target="_blank" class="externa"> George Orwell </a>, na qual fizemos uma leitura em conjunto do mesmo, discussões acerca do enredo, além da elaboração da culminância. </p>
+
+            <p> A eletiva "Todos os animais são iguais, mas alguns animais são mais iguais que outros.", elaborada pelos professores <a href="https://www.instagram.com/analuciahumberto/" target="_blank">Ana Lúcia</a> e <a href="https://www.instagram.com/pedro.henriqueprof/" target="_blank">Pedro</a>, teve como temática principal, o livro "A Revolução dos Bichos", de <a href="https://www.companhiadasletras.com.br/autor.php?codigo=02241" target="_blank" class="externa">George Orwell</a>, na qual fizemos uma leitura em conjunto do mesmo, discussões acerca do enredo, além da elaboração da culminância. </p>
+
             <h2> Resumo do livro </h2>
-            <p> "" <br>
-             - A Revolução dos bichos (edição da Companhia das Letras) </a></p>
+
+            <p> "A Revolução dos Bichos, de George Orwell, se passa numa granja liderada, inicialmente, pelo Sr. Jones. Porém, insatisfeitos com a dominação e exploração e liderados pelo Porco Major, os animais decidem fazer uma revolução. Assim, o inimigo seria aquele que anda sobre duas pernas." <br>
+             - <i> A Revolução dos bichos </i> por <a href="http://educacao.globo.com/literatura/assunto/resumos-de-livros/a-revolucao-dos-bichos.html" target="_blank" class="externa">Natacha Bastos</a> </p>
+
+            <p> "Escrita em plena Segunda Guerra Mundial e publicada em 1945 depois de ter sido rejeitada por várias editoras, essa pequena narrativa causou desconforto ao satirizar ferozmente a <strong><abbr title="Stalinismo foi um regime totalitário de caráter comunista ocorrido na União Soviética, de 1927 a 1953, durante o governo do ditador Josef Stalin.">ditadura stalinista</abbr></strong> numa época em que os soviéticos ainda eram aliados do Ocidente na luta contra o eixo nazifascista. <br>
+            De fato, são claras as referências: o despótico Napoleão seria <strong><abbr title="Josef Stalin (1879-1953) foi um político, revolucionário comunista e ditador antifascista.">Stalin</abbr></strong>, o banido Bola-de-Neve seria <strong><abbr title="Leon Trotsky foi um intelectual marxista, revolucionário comunista e ativista político ucraniano que liderou os bolcheviques na Revolução Russa (1917).">Trotsky</abbr></strong>, e os eventos políticos - expurgos, instituição de um estado policial, deturpação tendenciosa da História - mimetizam os que estavam em curso na União Soviética. <br>
+            Com o acirramento da Guerra Fria, as mesmas razões que causaram constrangimento na época de sua publicação levaram <i>A revolução dos bichos</i> a ser amplamente usada pelo Ocidente nas décadas seguintes como arma ideológica contra o comunismo. O próprio Orwell, adepto do socialismo e inimigo de qualquer forma de manipulação política, sentiu-se incomodado com a utilização de sua fábula como panfleto." </p>
+
             <picture>
                     <source media="(max-width: 500px)" srcset="imagens/capa-1-p.jpg">
                     <img src="imagens/capa-1-p.jpg" alt="Capa da edição principal lida ao longo da eletiva" class="capa">
@@ -32,16 +40,14 @@
                 <h3> Apresentação das personagens </h2>
                 <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit atque voluptas cum quae aut repellat porro! Qui ea, nemo veniam pariatur ut necessitatibus ad architecto dolorum blanditiis est labore repudiandae? </p>
                 <ul>
-                    <li> <abbr title="Bola-de-Neve"> [nome em inglês] </abbr> </li>
-                    <li> <abbr title="Sansão"> [nome em inglês] </abbr> </li>
-                    <li> <abbr title="Major"> [nome em inglês] </abbr> </li>
                     <li> <abbr title="Sr. Jones"> Mr. Jones </abbr> </li>
-                    <li> <abbr title="Napoleão"> [nome em inglês] </abbr> </li>
-                    <li> <abbr title="personagem 6"> [nome em inglês] </abbr> </li>
-                    <li> <abbr title="personagem 7"> [nome em inglês] </abbr> </li>
-                    <li> <abbr title="personagem 8"> [nome em inglês] </abbr> </li>
-                    <li> <abbr title="personagem 9"> [nome em inglês] </abbr> </li>
-                    <li> <abbr title="personagem 10"> [nome em inglês] </abbr> </li>
+                    <li> <abbr title="Velho Major"> Old Major </abbr> </li>
+                    <li> <abbr title="Bola-de-Neve"> Snowball </abbr> </li>
+                    <li> <abbr title="Napoleão"> Napoleon </abbr> </li>
+                    <li> <abbr title="Sr. Whymper"> Mr. Whymper </abbr> </li>
+                    <li> <abbr title="Garganta"> Squealer </abbr> </li>
+                    <li> <abbr title="Sansão"> Boxer </abbr> </li>
+                    <li> Benjamin </li>
             </ul>
         </aside>
 
