Atualizei os arquivos HTML e CSS

--- a/index.html
+++ b/index.html
@@ -38,15 +38,15 @@
             </picture>
             <aside>
                 <h3> Apresentação das personagens </h2>
-                <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit atque voluptas cum quae aut repellat porro! Qui ea, nemo veniam pariatur ut necessitatibus ad architecto dolorum blanditiis est labore repudiandae? </p>
+                <p> (O nome das personagens pode variar de acordo com a edição do livro, mas, em suma, estes são os mais "comuns") </p>
                 <ul>
-                    <li> <abbr title="Sr. Jones"> Mr. Jones </abbr> </li>
-                    <li> <abbr title="Velho Major"> Old Major </abbr> </li>
-                    <li> <abbr title="Bola-de-Neve"> Snowball </abbr> </li>
-                    <li> <abbr title="Napoleão"> Napoleon </abbr> </li>
-                    <li> <abbr title="Sr. Whymper"> Mr. Whymper </abbr> </li>
-                    <li> <abbr title="Garganta"> Squealer </abbr> </li>
-                    <li> <abbr title="Sansão"> Boxer </abbr> </li>
+                    <li> <abbr title="Mr. Jones"> Sr. Jones </abbr> </li>
+                    <li> <abbr title="Old Major"> Velho Major </abbr> </li>
+                    <li> <abbr title="Snowball"> Bola-de-Neve </abbr> </li>
+                    <li> <abbr title="Napoleon"> Napoleão </abbr> </li>
+                    <li> <abbr title="Mr. Whymper"> Sr. Whymper </abbr> </li>
+                    <li> <abbr title="Squealer"> Garganta </abbr> </li>
+                    <li> <abbr title="Boxer"> Sansão </abbr> </li>
                     <li> Benjamin </li>
             </ul>
         </aside>
