--- a/index.html
+++ b/index.html
@@ -46,11 +46,16 @@
             </ul>
         </aside>
         <h2> Intertextualidade: exemplos </h2>
-            <p> O álbum <i>Animals</i>, da banda britânica <strong>Pink Floyd</strong>, faz alusão à obra <i>A Revolução dos Bichos</i>, onde cada música corresponde à uma personagem ou à um grupo de personagens presente no livro. Podemos citar 3 das 5 músicas que compõem o álbum, sendo elas: </p>
-            <p>
-                <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/2jvuMDqBK04WvCYYz5qjvG?utm_source=generator" width="100%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" alt="Música Dogs do álbum Animals"></iframe>
-            </p>
-    
+        <p> O álbum <i>Animals</i>, da banda britânica <strong>Pink Floyd</strong>, faz alusão à obra <i>A Revolução dos Bichos</i>, onde cada música corresponde à uma personagem ou à um grupo de personagens presente no livro. Podemos citar 3 das 5 músicas que compõem o álbum, sendo elas: </p>
+        <div>
+            <iframe style="border-radius: 10px" src="https://open.spotify.com/embed/track/2jvuMDqBK04WvCYYz5qjvG?utm_source=generator" width="60%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" alt="Música Dogs do álbum Animals" class="container"></iframe>
+        </div>
+        <div>
+            <iframe style="border-radius: 10px" src="https://open.spotify.com/embed/track/0gEaeqVRHPzRc7HMXtOKc7?utm_source=generator" width="60%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" alt="Música Pigs (Three Different Ones) do álbum Animals" class="container"></iframe>
+        </div>
+        <div>
+            <iframe style="border-radius: 10px" src="https://open.spotify.com/embed/track/55e99bv2wlgTYtNEYHWtN1?utm_source=generator" width="60%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" class="container"></iframe>
+        </div>
         </article>
     </main>
     <footer>
