Atualizei os arquivos HTML e CSS

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     </header>
     <nav>
         <a href="#"> Home </a>
-        <a href="#"> Curiosidades </a>
-        <a href="#"> Quem somos </a>     
+        <a href="#"> Galeria </a> 
+        <a href="#"> Quem somos </a> 
     </nav>
     <main>
         <article>
@@ -27,10 +27,11 @@
             <p> "Escrita em plena Segunda Guerra Mundial e publicada em 1945 depois de ter sido rejeitada por várias editoras, essa pequena narrativa causou desconforto ao satirizar ferozmente a <strong><abbr title="Stalinismo foi um regime totalitário de caráter comunista ocorrido na União Soviética, de 1927 a 1953, durante o governo do ditador Josef Stalin.">ditadura stalinista</abbr></strong> numa época em que os soviéticos ainda eram aliados do Ocidente na luta contra o eixo nazifascista. <br>
             De fato, são claras as referências: o despótico Napoleão seria <strong><abbr title="Josef Stalin (1879-1953) foi um político, revolucionário comunista e ditador antifascista.">Stalin</abbr></strong>, o banido Bola-de-Neve seria <strong><abbr title="Leon Trotsky foi um intelectual marxista, revolucionário comunista e ativista político ucraniano que liderou os bolcheviques na Revolução Russa (1917).">Trotsky</abbr></strong>, e os eventos políticos - expurgos, instituição de um estado policial, deturpação tendenciosa da História - mimetizam os que estavam em curso na União Soviética. <br>
             Com o acirramento da Guerra Fria, as mesmas razões que causaram constrangimento na época de sua publicação levaram <i>A revolução dos bichos</i> a ser amplamente usada pelo Ocidente nas décadas seguintes como arma ideológica contra o comunismo. O próprio Orwell, adepto do socialismo e inimigo de qualquer forma de manipulação política, sentiu-se incomodado com a utilização de sua fábula como panfleto." </p>
-            <picture>
-                    <source media="(max-width: 500px)" srcset="imagens/capa-1-p.jpg">
-                    <img src="imagens/capa-1-p.jpg" alt="Capa da edição principal lida ao longo da eletiva" class="capa">
-            </picture>
+            <div>
+                <picture>
+                        <img src="imagens/capa-1.jpg" alt="Capa da edição lida ao longo da eletiva" id="responsivo">
+                </picture>
+            </div>
             <aside>
                 <h3> Apresentação das personagens </h2>
                 <p> (O nome das personagens pode variar de acordo com a edição do livro, mas, em suma, estes são os mais "comuns") </p>
