Atualizei os arquivos HTML e CSS

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 </picture>
             </div>
             <aside>
-                <h3> Apresentação das personagens </h2>
+                <!-- <h3> Apresentação das personagens </h2> -->
                 <p> (O nome das personagens pode variar de acordo com a edição do livro, mas, em suma, estes são os mais "comuns") </p>
                 <ul>
                     <li> <abbr title="Mr. Jones"> Sr. Jones </abbr> </li>
