--- a/index.html
+++ b/index.html
@@ -50,17 +50,26 @@
         <p> O álbum <i>Animals</i>, da banda britânica <strong>Pink Floyd</strong>, faz alusão à obra <i>A Revolução dos Bichos</i>, onde cada música corresponde à uma personagem ou à um grupo de personagens presente no livro. Podemos citar 3 das 5 músicas que compõem o álbum, sendo elas: </p>
 
         <p class="musica"> <strong>Dogs: </strong> A música fala sobre os cães do livro, que representam os "homens da lei", aqueles que mantém a ordem dentro da Granja. Eles são, a princípio, as pessoas obcecadas com o sucesso, que enxergam a vida de forma extremamente objetiva. </p>
+
         <div>
-            <iframe style="border-radius: 10px" src="https://open.spotify.com/embed/track/2jvuMDqBK04WvCYYz5qjvG?utm_source=generator" width="60%" height="80" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" alt="Música Dogs do álbum Animals" class="container"></iframe>
+            <audio preload="metadata" autoplay controls loop>
+                <source src="media/Dogs.mp3" type="audio/mpeg">
         </div>
+            
         <p class="musica"> <strong>Pigs (Three Different Ones): </strong> Waters descreve os porcos como a elite, aqueles que ocupam as posições mais altas na sociedade e exercem influência sobre os demais. </p>
+
         <div>
-            <iframe style="border-radius: 10px" src="https://open.spotify.com/embed/track/0gEaeqVRHPzRc7HMXtOKc7?utm_source=generator" width="60%" height="80" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" alt="Música Pigs (Three Different Ones) do álbum Animals" class="container"></iframe>
+            <audio preload="metadata" autoplay controls loop>
+                <source src="media/Pigs.mp3" type="audio/mpeg">
         </div>
+
         <p class="musica"> <strong>Sheep: </strong> As ovelhas são as pessoas mais medíocres da sociedade, as mais alienáveis e sem ambição, que agem conforme as regras de cima. </p>
+
         <div>
-            <iframe style="border-radius: 10px" src="https://open.spotify.com/embed/track/55e99bv2wlgTYtNEYHWtN1?utm_source=generator" width="60%" height="80" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" class="container" alt="Música Sheep do álbum Animals"></iframe>
+            <audio preload="metadata" autoplay controls loop>
+                <source src="media/Sheep.mp3" type="audio/mpeg">
         </div>
+        
         </article>
     </main>
     <footer>
