Criei uma página para o projeto da eletiva
Estou trabalhando em uma galeria de fotos para finalizar esse projeto.

--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
 <body>
     <header>
         <h1> A Revolução dos Bichos </h1>
-        <p> Projeto de site criado para a eletiva: "Todos os animais são iguais, mas alguns animais são mais iguais que outros." </p>
+        <p> Projeto de site criado para a eletiva: "Todos os animais são iguais, mas alguns são mais iguais que outros." </p>
     </header>
     <nav>
         <a href="#"> Home </a>
-        <a href="#"> Galeria </a> 
+        <a href="galeria.html"> Galeria </a> 
         <a href="#"> Quem somos </a> 
     </nav>
     <main>
         <article>
             <h2> Apresentação da eletiva </h1>
-            <p> A eletiva "Todos os animais são iguais, mas alguns animais são mais iguais que outros.", elaborada pelos professores <a href="https://www.instagram.com/analuciahumberto/" target="_blank">Ana Lúcia</a> e <a href="https://www.instagram.com/pedro.henriqueprof/" target="_blank">Pedro</a>, teve como temática principal, o livro "A Revolução dos Bichos", de <a href="https://www.companhiadasletras.com.br/autor.php?codigo=02241" target="_blank" class="externa">George Orwell</a>, na qual fizemos uma leitura em conjunto do mesmo, discussões acerca do enredo, além da elaboração da culminância. </p>
+            <p> A eletiva "Todos os animais são iguais, mas alguns são mais iguais que outros.", elaborada pelos professores <a href="https://www.instagram.com/analuciahumberto/" target="_blank">Ana Lúcia</a> e <a href="https://www.instagram.com/pedro.henriqueprof/" target="_blank">Pedro</a>, teve como temática principal, o livro "A Revolução dos Bichos", de <a href="https://www.companhiadasletras.com.br/autor.php?codigo=02241" target="_blank" class="externa">George Orwell</a>, na qual fizemos uma leitura em conjunto do mesmo, discussões acerca do enredo, além da elaboração da culminância. </p>
             <h2> Resumo do livro </h2>
             <p> "A Revolução dos Bichos, de George Orwell, se passa numa granja liderada, inicialmente, pelo Sr. Jones. Porém, insatisfeitos com a dominação e exploração e liderados pelo Porco Major, os animais decidem fazer uma revolução. Assim, o inimigo seria aquele que anda sobre duas pernas." <br>
              - <i> A Revolução dos bichos </i> por <a href="http://educacao.globo.com/literatura/assunto/resumos-de-livros/a-revolucao-dos-bichos.html" target="_blank" class="externa">Natacha Bastos</a> </p>
@@ -69,7 +69,6 @@
             <audio preload="metadata" autoplay controls loop>
                 <source src="media/Sheep.mp3" type="audio/mpeg">
         </div>
-        
         </article>
     </main>
     <footer>
